# imonitor

./: .gitignore  Cargo.toml  README.md  TODO.md
Doc/: lockdownd.md
documentation/: lockdownd_reverse.md  pairing_file_expiration.md  setup.md
example/: config.toml
example/devices/: devices.toml
example/s3/: config.toml  env
example/systemd/: imonitor-send.service  imonitor.service
src/heartbeat_client/: Cargo.toml
src/idevice/src/: lib.rs
src/imonitor/: Cargo.toml
src/imonitor-enroll/: Cargo.toml
src/imonitor-enroll/src/: main.rs
src/imonitor-lib/: Cargo.toml
src/imonitor-lib/src/: config.rs  lib.rs  provider.rs
src/imonitor-lib/src/device/: errors.rs  mod.rs
src/imonitor-lib/src/device/activity_coverage/: errors.rs  mod.rs
src/imonitor-lib/src/services/: mod.rs
src/imonitor-lib/src/services/crashes/: client.rs  errors.rs
src/imonitor-lib/src/services/diagnosticsservice/: client.rs  errors.rs
src/imonitor-lib/src/services/heartbeat/: client.rs  errors.rs  mod.rs
src/imonitor-lib/src/services/os_trace/: client.rs  errors.rs  mod.rs
src/imonitor-lib/src/services/os_trace/archive/: errors.rs  mod.rs
src/imonitor-lib/src/services/remote_xpc/: client.rs  errors.rs
src/imonitor-lib/src/services/syslog/: client.rs  errors.rs
src/imonitor-send/: Cargo.toml
src/imonitor-send/src/: main.rs
src/imonitor/src/: main.rs  monitored_devices.rs
src/logger/: Cargo.toml
src/logger/src/: lib.rs
