[workspace]
members = ["src/imonitor-lib", "src/imonitor", "src/imonitor-enroll", "src/logger", "src/imonitor-send", "src/idevice"]
default-members = ["src/imonitor", "src/logger"]
resolver = "3"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = "z"
debug = false
panic = "abort"
lto = true
codegen-units = 1
strip = true
