[package]
name = "heartbeat_client"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
log = { version = "0.4" }
env_logger = { version = "0.11" }
# tun-rs = { version = "1.5", features = ["async"] }
sha2 = { version = "0.10" }
ureq = { version = "3" }
clap = { version = "4.5" }
plist = { version = "1.7" }
ns-keyed-archive = "0.1.2"
uuid = "1.16"
idevice = { path = "../idevice", features = ["full", "aws-lc"], default-features = false}
futures-util = { version = "0.3" }
