[package]
name = "imonitor-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
humantime-serde = "1"
#idevice = { version = "=0.1.40", features = ["full"] }
idevice = { path = "../idevice", features = ["full"], default-features = false}
#idevice = { git = "https://github.com/jkcoxson/idevice.git", features = ["full"] }
logger = { path = "../logger" }
phf = { version = "0", features = ["macros"] }
plist = "1"
serde = "1"
serde_json = "1"
tar = "0.4"
tokio = { version = "1.43", features = ["full"] }
toml = "0.9"
tracing = "0.1.41"
