[package]
name = "imonitor-send"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
chrono = "0"
aws-config = "1"
aws-sdk-s3 = "1"
aws-smithy-types = "1"
bytes = "1"
tracing = "0"
tracing-subscriber = "0.3.17"
serde = { version = "1", features = ["derive"] }
toml = "0"
