[package]
name = "imonitor"
version = "0.1.0"
edition = "2024"

[dependencies]
imonitor-lib = { path = "../imonitor-lib"}
#idevice = { version = "=0.1.37", features = ["full"] }
idevice = { git = "https://github.com/jkcoxson/idevice.git", features = ["full"] }
tokio = { version = "1", features = ["full"] }
env_logger = "0"
log = "0"
toml = "0.9"
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
